[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "fpdf>=1.7.2",
    "matplotlib>=3.10.1",
    "numpy>=2.2.3",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "plotly>=6.0.0",
    "reportlab>=4.3.1",
    "seaborn>=0.13.2",
    "streamlit>=1.43.1",
    "xlsxwriter>=3.2.2",
]
